<?xml version="1.0" encoding="UTF-8"?>
<!--
  =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
  DD Poker - Source Code
  Copyright (c) 2003-2026 Doug Donohoe
  
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  For the full License text, please see the LICENSE.txt file
  in the root directory of this project.
  
  The "DD Poker" and "Donohoe Digital" names and logos, as well as any images, 
  graphics, text, and documentation found in this repository (including but not
  limited to written documentation, website content, and marketing materials) 
  are licensed under the Creative Commons Attribution-NonCommercial-NoDerivatives 
  4.0 International License (CC BY-NC-ND 4.0). You may not use these assets 
  without explicit written permission for any uses not covered by this License.
  For the full License text, please see the LICENSE-CREATIVE-COMMONS.txt file
  in the root directory of this project.
  
  For inquiries regarding commercial licensing of this source code or 
  the use of names, logos, images, text, or other assets, please contact 
  doug [at] donohoe [dot] info.
  =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.donohoedigital</groupId>
  <artifactId>all</artifactId>
  <packaging>pom</packaging>
  <version>3.0</version>
  <name>all</name>

  <modules>
    <module>common</module>
    <module>mail</module>
    <module>gui</module>
    <module>installer</module>
    <module>db</module>
    <module>wicket</module>
    <module>jsp</module>
    <module>server</module>
    <module>udp</module>
    <module>tools</module>
    <module>gamecommon</module>
    <module>gameengine</module>
    <module>gameserver</module>
    <module>gametools</module>
    <module>ddpoker</module>
    <module>pokerengine</module>
    <module>pokernetwork</module>
    <module>poker</module>
    <module>pokerserver</module>
    <module>pokerwicket</module>
    <module>proto</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <log4j2.version>2.26.1</log4j2.version>
    <slf4j.version>2.0.16</slf4j.version>
    <servlet.api.version>6.1.0</servlet.api.version>
    <tomcat.version>11.0.25</tomcat.version>
    <spring.version>6.2.19</spring.version>
    <hibernate.version>6.6.56.Final</hibernate.version>
    <jetty.version>12.1.12</jetty.version>
    <junit.version>6.1.3</junit.version>
    <wicket.version>10.11.0</wicket.version>
    <wicket.jquery.ui.version>10.0.0-M1</wicket.jquery.ui.version>
    <dependency.classpath.outputFile>target/classpath.txt</dependency.classpath.outputFile>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.16.0</version>
        <configuration>
          <release>25</release>
          <fork>true</fork>
          <compilerArgs>
            <arg>-Xlint:deprecation,removal</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <outputFile>${dependency.classpath.outputFile}</outputFile>
          <includeScope>runtime</includeScope>
        </configuration>
        <executions>
          <execution>
            <id>build-classpath</id>
            <phase>package</phase>
            <goals>
              <goal>build-classpath</goal>
            </goals>
            <configuration>
              <outputFile>${dependency.classpath.outputFile}</outputFile>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.5.1</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.6.0</version>
      </plugin>

      <!--
        OpenRewrite - automated source modernization.  Not bound to any lifecycle phase, so
        ordinary builds are unaffected.  Recipes are defined in rewrite.yml in the repo root
        (the plugin's default location - Maven treats the repo root as the multi-module root
        because .mvn/ lives there).  See "Code Modernization" in README-DEV.md for usage.
      -->
      <plugin>
        <groupId>org.openrewrite.maven</groupId>
        <artifactId>rewrite-maven-plugin</artifactId>
        <version>6.46.1</version>
        <configuration>
          <activeStyles>
            <style>com.donohoedigital.ImportStyle</style>
          </activeStyles>
        </configuration>
        <!-- Versions are those pinned by rewrite-recipe-bom 3.37.0.  A BOM cannot be
             imported here - Maven only honours scope=import in dependencyManagement -
             so they are listed explicitly and should be bumped as a set. -->
        <dependencies>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-static-analysis</artifactId>
            <version>2.41.0</version>
          </dependency>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-logging-frameworks</artifactId>
            <version>3.32.0</version>
          </dependency>
          <dependency>
            <groupId>org.openrewrite.recipe</groupId>
            <artifactId>rewrite-migrate-java</artifactId>
            <version>3.42.0</version>
          </dependency>
        </dependencies>
      </plugin>

    </plugins>

    <resources>
      <resource>
        <filtering>false</filtering>
        <directory>${basedir}/src/main/java</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <filtering>false</filtering>
        <directory>${basedir}/src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>

    <testResources>
      <testResource>
        <filtering>false</filtering>
        <directory>${basedir}/src/test/java</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
      <testResource>
        <filtering>false</filtering>
        <directory>${basedir}/src/test/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
    </testResources>

  </build>

</project>
